# GoveeBTTempLogger

./: .gitignore  CMakeLists.txt  GoveeBTTempLogger.sln  GoveeBTTempLogger.vcxproj  LICENSE  README.md  goveebttemplogger-hci.cpp  goveebttemplogger-hci.h  goveebttemplogger-version.h.in  goveebttemplogger.cpp  goveebttemplogger.h  goveebttemplogger.service  gvh-organizelogs.cpp  gvh-titlemap.txt  index.html  main.cpp  makefile  mrtg.conf  organizelogfiles.cpp  postinst  postrm  prerm  uuid.c  wimiso8601.cpp  wimiso8601.h
.github/workflows/: build_cmake.yml  ci.yml  flawfinder.yml
BLEScanning/: readme.md
BTData/: 20230127.pcapng  20230207-GVH5074_5C0F-2.pcapng  20230207-GVH5074_5C0F-3.pcapng  20230207-GVH5074_5C0F.pcapng  20230207-GVH5174_CC3D.pcapng  20230215-GVH5074_5C0F.pcapng  20230221-GVH5074_5C0F.pcapng  README.md  WimPi5-2026-05-19-H5105-info.pcapng  bluetooth0_capture_11_30-goveebttemplogger-inout.pcap  btsnoop-details.txt  h5074-and-h5174.pcapng  h5174-1.pcapng  h5174-2.pcapng  hci-5074.txt  hci-5075.txt  hci-5100.txt  hci-5104.txt  hci-5105.txt  hci-5111.txt  hci-5174.txt  hci-5177.txt  hci-5179.txt
DeviceImages/: README.md
GoveeBTTempLogger/DEBIAN/: control  postinst  postrm  prerm
GoveeBTTempLogger/etc/init.d/: goveebttemplogger
GoveeBTTempLogger/etc/systemd/system/: goveebttemplogger.service
GoveeBTTempLogger/usr/local/lib/systemd/system/: goveebttemplogger.service
ruuvi/: README.md
